--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,4 @@ collections:
     description: "My thoughts and ideas"
     feature_text: |
       Welcome to my blog
-    feature_image: "https://picsum.photos/2560/600?image=866"
+    feature_image: "https://speechbrain.github.io/images/head.png"
