--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: SpeechBrain
 description: The PyTorch-based Speech Toolkit.
 show_downloads: false
-google_analytics:
+google_analytics: UA-146863989-1
 theme: jekyll-theme-cayman
 logo: https://speechbrain.github.io/assets/logo_rounded.png
