--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SpeechBrain
-description: The PyTorch-based Speech Toolkit.
+description: A PyTorch-based Speech Toolkit.
 show_downloads: false
 google_analytics: UA-146863989-1
 theme: jekyll-theme-cayman
