--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: A PyTorch-based Speech Toolkit.
 show_downloads: false
 google_analytics: UA-146863989-1
 theme: jekyll-theme-cayman
-logo: https://speechbrain.github.io/assets/logo_rounded.png
+logo: https://speechbrain.github.io/assets/logo_noname_rounded_small.png
